ECOSCOM-5721 - Merge fix