@@ -128,9 +128,6 @@ tasks {
     runIde {
         jvmArgs(
             "-Xmx2G",
-            "-javaagent:/home/spk/programs/jebra/ja-netfilter.jar=jetbrains",
-            "--add-opens=java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED",
-            "--add-opens=java.base/jdk.internal.org.objectweb.asm.tree=ALL-UNNAMED"
         )
     }
 }
